# Mobile-robot-chasing-a-1cm-white-ball

./: Chase.rviz  README.md  RvizLaunchChase.launch
ball_chaser/: CMakeLists.txt  package.xml
ball_chaser/launch/: ball_chaser.launch
ball_chaser/src/: drive_bot.cpp  process_image.cpp
my_robot/: package.xml
my_robot/launch/: robot_description.launch
my_robot/urdf/: my_robot.xacro
my_robot/worlds/: bayworld.world  world.launch
